Remove redundant threshold enumerations.
Refs #113677